--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </header>
     <main>
         <section>
+            
+        </section>
+        <section>
             <h2 id="seccion">
                 Sección Nº 1 de la página
             </h2>
