Se agregan carpeta y archivo de video

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section>
-            
+            <a href="./sitio/"></a>
         </section>
         <section>
             <h2 id="seccion">
