Se agrega link de menu al pie en forma de boton

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
         </section>
     </main>
     <footer>
+        <menu>
+            <a href="./sitio/ver_videos.html"><button>Ver video</button></a>
+        </menu>
         <p>
             Copyright &copy;2024
         </p>
