Se agregan cambios

--- a/sitio/ver_videos.html
+++ b/sitio/ver_videos.html
@@ -9,11 +9,13 @@
       <header><h1>Ver Videos</h1></header>
       <main>
             <section>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptates maiores cupiditate, dolores ut consequuntur esse hic quia quae accusantium praesentium suscipit ipsum ea quis. Doloribus similique dolorem corrupti molestias!
-                  Unde fuga incidunt labore, necessitatibus nulla commodi, sed nobis vel doloremque alias possimus placeat officia minus neque odit quia quibusdam. Incidunt ea quis ipsa impedit numquam minima corporis reiciendis alias.
+                  <video preload controls autoplay loop>
+                        <source src="../video/skipping.mp4">
+                  </video>
             </section>
             <section>
-                  <video src="../video/skipping.mp4">VIDEO</video>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptates maiores cupiditate, dolores ut consequuntur esse hic quia quae accusantium praesentium suscipit ipsum ea quis. Doloribus similique dolorem corrupti molestias!
+                  Unde fuga incidunt labore, necessitatibus nulla commodi, sed nobis vel doloremque alias possimus placeat officia minus neque odit quia quibusdam. Incidunt ea quis ipsa impedit numquam minima corporis reiciendis alias.
             </section>
       </main>
 <footer>
