Se agregan cambios

--- a/sitio/ver_videos.html
+++ b/sitio/ver_videos.html
@@ -6,11 +6,11 @@
       <title>Ver Videos</title>
 </head>
 <body>
-      <header><h1>Ver Videos</h1></header>
+      <header><h1>Ver Videos:</h1></header>
       <main>
             <section>
                   <video preload controls autoplay loop>
-                        <source src="../video/skipping.mp4">
+                        <source src="../video/salto.mp4">
                   </video>
             </section>
             <section>
