--- a/sitio/seccion_2.html
+++ b/sitio/seccion_2.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>
-            Más información
+            Más información:
         </h1>
     </header>
     <main>
