Se agregan cambios

--- a/sitio/ver_videos.html
+++ b/sitio/ver_videos.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Ver Videos</title>
+      <style>
+            .minimo {
+                  padding: 0;
+                  margin: 0;
+                  width: 400px;
+            }
+      </style>
 </head>
 <body>
       <header><h1>Ver Videos:</h1></header>
       <main>
             <section>
-                  <video preload controls autoplay loop>
+                  <video class="minimo" preload controls autoplay loop>
                         <source src="../video/salto.mp4">
                   </video>
             </section>
