--- a/sitio/index.html
+++ b/sitio/index.html
@@ -3,10 +3,10 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="refresh" content="0; url=../">
-      <title>Redirección</title>
+      
+      <title>Sitio</title>
 </head>
 <body>
-      
+      <a href="../"><h1>Regresar a la página principal</h1></a>
 </body>
 </html>
