Se agregan cambios

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                               neque dicta amet tempore? Minima cupiditate molestiae, voluptate corrupti id maxime blanditiis deleniti a enim alias ab, illum ipsa!</p>
             <!-- Ruta absoluta al archivo en disco-->
             <!-- Ojo! Live Server lo bloquea y no lo abre! -->
-            <div>
+            <!-- <div>
                 <a href="F:/Raimundo/Ray/Cloud/OneDrive/CODO%20A%20CODO/Clase%205/sitio/seccion_2.html">Ampliar información</a> (Ruta absoluta al archivo en disco -No funciona en Live Server-)    
-            </div>
+            </div> -->
             <!-- Ruta absoluta -->
-            <a href="http://127.0.0.1:5500/Clase%205/sitio/seccion_2.html">Ampliar información</a> (Ruta absoluta)
-            <br>
+            <a href="https://raimun2000.github.io/sitio/seccion_2.html">Ampliar información</a> (Ruta absoluta)
+            <br><br>
             <!--  Ruta relativa -->
             <a href="sitio/seccion_2.html">Ampliar información</a> (Ruta relativa)
             <br>
